--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "react-timer-hook": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
